src/objects/Outage_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Begin_Date_Time__c</fullName>
        <label>Begin Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outage_SMS_Message_del__c</fullName>
        <label>Outage SMS Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outage_SMS_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outage SMS Template</label>
        <referenceTo>Alert_Template__c</referenceTo>
        <relationshipLabel>Outage Alerts</relationshipLabel>
        <relationshipName>Outage_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outage_Subject__c</fullName>
        <label>Outage Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outage_Text__c</fullName>
        <label>Outage Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Outage_Type__c</fullName>
        <label>Outage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Unplanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Outage Alerts</relationshipLabel>
        <relationshipName>Outage_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stop</label>
        <referenceTo>Stop__c</referenceTo>
        <relationshipLabel>Outage Alerts</relationshipLabel>
        <relationshipName>Outage_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trip</label>
        <referenceTo>Trip__c</referenceTo>
        <relationshipLabel>Outage Alerts</relationshipLabel>
        <relationshipName>Outage_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outage Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Outage_Subject__c</columns>
        <columns>Stop__c</columns>
        <columns>Trip__c</columns>
        <columns>Route__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Outage_Subject__c</columns>
        <columns>Outage_Type__c</columns>
        <columns>Begin_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Begin_Date_Time__c</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>End_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Current Alerts</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{000000000}</displayFormat>
        <label>Outage Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outage Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>